@@ -16,6 +16,3 @@ python-apport:
 
 apport:
  - ignore mono crashes
-
-ui:
- - do not crash on nonexisting package names
